--- a/P0/AndroidManifest.xml
+++ b/P0/AndroidManifest.xml
@@ -5,7 +5,7 @@
       android:versionName="1.0">
 
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@style/CustomTheme">
         <activity android:name="BucketMain"
                   android:label="@string/app_name">
             <intent-filter>
@@ -13,6 +13,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+		<activity android:name="TaskEdit"
+					android:label="@string/app_name">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+			</intent-filter>
+		</activity>
 
     </application>
 </manifest>
