--- a/P0/AndroidManifest.xml
+++ b/P0/AndroidManifest.xml
@@ -6,20 +6,19 @@
 
 
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@style/CustomTheme">
-        <activity android:name="BucketMain"
-                  android:label="@string/app_name">
+        <activity android:label="@string/app_name" android:name=".BucketMain">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         
-		<activity android:name="TaskEdit"
-					android:label="@string/app_name">
+		<activity android:name=".TaskEdit">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 			</intent-filter>
 		</activity>
+		<activity android:name=".CategoryEdit"></activity>
 
     </application>
 </manifest>
