--- a/Location Assignment/.classpath
+++ b/Location Assignment/.classpath
@@ -3,5 +3,10 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
+	<classpathentry kind="lib" path="C:/Users/Mine/Documents/Android-Sdk-Windows/add-ons/addon_google_apis_google_inc_7/libs/maps.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/C:/Users/Mine/Documents/Android-Sdk-Windows/add-ons/addon_google_apis_google_inc_7/docs/reference"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
