--- a/Location Assignment/AndroidManifest.xml
+++ b/Location Assignment/AndroidManifest.xml
@@ -3,11 +3,19 @@
       package="com.hag.bucketlst"
       android:versionCode="1"
       android:versionName="1.0">
-
+      
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
+	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.CONTROL_LOCATION_UPDATES" />
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
+     <uses-library android:name="com.google.android.maps" />
         <activity android:name=".LocationCapture"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+                  android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -15,6 +23,5 @@
         </activity>
 
     </application>
-    
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
+
 </manifest>
