--- a/Location Assignment/AndroidManifest.xml
+++ b/Location Assignment/AndroidManifest.xml
@@ -7,12 +7,12 @@
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
-	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.CONTROL_LOCATION_UPDATES" />
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".LocationCapture"
+        		  android:configChanges="orientation|keyboardHidden"
                   android:label="@string/app_name"
                   android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
