--- a/P0/AndroidManifest.xml
+++ b/P0/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@style/CustomTheme">
         <activity android:label="@string/app_name" android:name=".BucketMain"
         	android:configChanges="orientation|keyboardHidden"
-        	android:windowSoftInputMode="adjustResize">
+        	android:windowSoftInputMode="adjustResize|stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -16,27 +16,27 @@
         </activity>
 		
 		<activity android:name=".NTaskEdit" android:configChanges="orientation|keyboardHidden"
-			android:windowSoftInputMode="adjustResize">
+			android:windowSoftInputMode="adjustResize|stateHidden">
 		</activity>
 
 		<activity android:name=".MyTasks" android:configChanges="orientation|keyboardHidden"
-			android:windowSoftInputMode="adjustResize">
+			android:windowSoftInputMode="adjustResize|stateHidden">
 		</activity>
 		
 		<activity android:name=".MyDoneTasks" android:configChanges="orientation|keyboardHidden"
-			android:windowSoftInputMode="adjustResize">
+			android:windowSoftInputMode="adjustResize|stateHidden">
 		</activity>		
 
 		<activity android:name=".CategoryEdit" android:configChanges="orientation|keyboardHidden" 
-			android:windowSoftInputMode="adjustResize">
+			android:windowSoftInputMode="adjustResize|stateHidden">
 		</activity>
 		
 		<activity android:name=".ByBuckets" android:configChanges="orientation|keyboardHidden" 
-			android:windowSoftInputMode="adjustResize">
+			android:windowSoftInputMode="adjustResize|stateHidden">
 		</activity>
 		
 		<activity android:name=".ByPriority" android:configChanges="orientation|keyboardHidden" 
-			android:windowSoftInputMode="adjustResize">
+			android:windowSoftInputMode="adjustResize|stateHidden">
 		</activity>
 		
     </application>
