--- a/P0/AndroidManifest.xml
+++ b/P0/AndroidManifest.xml
@@ -47,6 +47,10 @@
 		<activity android:name=".activity.ByBuckets" android:configChanges="orientation|keyboardHidden" 
 			android:windowSoftInputMode="adjustResize|stateHidden">
 		</activity>	
+		
+		<activity android:name=".activity.NCollabView" android:configChanges="orientation|keyboardHidden" 
+			android:windowSoftInputMode="adjustResize|stateHidden">
+		</activity>				
 				
 		<activity android:name=".activity.FakeUserAdd" android:configChanges="orientation|keyboardHidden" 
 			android:windowSoftInputMode="adjustResize|stateHidden">
